--- a/dockerfile.txt
+++ b/dockerfile.txt
@@ -5,7 +5,8 @@ WORKDIR /app
 COPY . /app
 
 RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip install flask python-telegram-bot facefusion
+
 RUN mkdir -p static
 
 EXPOSE 5000
